--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   # Authentication
+  validate: ^1.7.0
   google_sign_in: ^3.2.4
   firebase_auth: ^0.6.2+1
 
@@ -20,3 +21,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/email.png
+    - assets/images/google.png
