--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,15 @@ dependencies:
 
   # Authentication
   validate: ^1.7.0
-  google_sign_in: ^3.2.4
+  google_sign_in: ^3.2.2
   firebase_auth: ^0.6.2+1
+
+  # Database
+  cloud_firestore: ^0.8.2+3
+
+  # Tracking
+  money: ^0.2.1
+  geolocator: ^2.1.0
 
 dev_dependencies:
   flutter_test:
